src/test/ui/auto-traits/issue-23080-2.stderr
error[E0380]: auto traits cannot have associated items
  --> $DIR/issue-23080-2.rs:5:10
   |
LL | unsafe auto trait Trait {
   |                   ----- auto trait cannot have associated items
LL |     type Output;
   |     -----^^^^^^- help: remove these associated items

error: aborting due to previous error

For more information about this error, try `rustc --explain E0380`.
